# opinometer

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DATABASE_SETUP.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
alembic/: README  env.py
alembic/versions/: 0001_initial_migration.py  0002_convert_json_columns_to_jsonb.py
database/: schema.sql
docs/: DEVELOPMENT.md
planning/: 2025-09-25-opinometer-initial-plan.md  2025-09-25-simple-prototype-plan.md
scripts/: setup_database.py
src/: analysis.py  config.py  display.py  file_io.py  hackernews.py  main.py  model_extractor.py  stopwords.py  version_extractor.py
src/database/: __init__.py  cli.py  config.py  connection.py  models.py
tests/: test_model_extractor.py  test_model_extractor_negative.py  test_version_extractor.py
