[project]
name = "opinometer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.28.1",
    "praw==7.8.1",
    "pydantic-settings==2.11.0",
    "rich==14.1.0",
    "vadersentiment==3.3.2",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
]
