[project]
name = "opinometer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0, <3.14.0"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "httpx==0.28.1",
    "rich==14.1.0",
    "typer==0.15.1",
    "vadersentiment==3.3.2",
    "sqlmodel==0.0.22",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    "pydantic-settings==2.6.1",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
]
